[package]
name = "todors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
actix = "0.13.0"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.154", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "numeric", "uuid", "postgres_backend"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15.6"
serde_json = "1.0.86"
email_address = "0.2.4"
diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }
